--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,6 +19,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
         android:hint="请输入账号"
+        android:inputType="number"
         android:maxLength="11"
         android:maxLines="1"
         android:singleLine="true"/>
