--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/main_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/line">
+    </FrameLayout>
+
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        android:layout_above="@+id/main_group"
+        android:background="@color/graydd"/>
+
+    <RadioGroup
+        android:id="@+id/main_group"
+        android:paddingTop="6dp"
+        android:paddingBottom="3dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <RadioButton
+            android:id="@+id/main_rb_home"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/main_rb_home"
+            android:visibility="visible"
+            android:drawablePadding="5dp"
+            android:button="@null"
+            android:gravity="center"
+            android:textSize="13sp"
+            android:textColor="@drawable/rb_checked_main_text_selector"
+            android:drawableTop="@drawable/rb_checked_main_selector"/>
+
+
+        <RadioButton
+            android:id="@+id/main_rb_my"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:button="@null"
+            android:text="@string/main_rb_my"
+            android:textSize="13sp"
+            android:drawablePadding="5dp"
+            android:gravity="center"
+            android:textColor="@drawable/rb_checked_main_text_selector"
+            android:drawableTop="@drawable/rb_checked_my_selector"/>
+
+    </RadioGroup>
+
+</RelativeLayout>
