常用弹框封装

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,19 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="graydd">#dddddd</color>
+    <!-- 透明色 -->
+    <color name="transparent">#00000000</color>
+
+    <color name="black85">#D9000000</color>
+    <!-- 分割线的颜色 -->
+    <color name="colorLine">#ECECEC</color>
+    <!-- 对话框确认按钮文本颜色 -->
+    <color name="colorConfirm">#007AFF</color>
+    <!-- 对话框取消按钮文本颜色 -->
+    <color name="colorCancel">#F44336</color>
+
+    <color name="black5">#0D000000</color>
+
+
+
 </resources>
