--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -1,16 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <TextView
-        android:id="@+id/textView"
+
+    <Button
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/sp_20"
-        android:text="@string/main_rb_my"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/str_login"
+        android:textSize="@dimen/sp_20"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btnWiat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="加载中"
+        android:textSize="@dimen/sp_20"/>
+
+    <Button
+        android:id="@+id/btnSuccess"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="操作成功"
+        android:textSize="@dimen/sp_20"/>
+
+    <Button
+        android:id="@+id/btnWarn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="警告"
+        android:textSize="@dimen/sp_20"/>
+
+    <Button
+        android:id="@+id/btnFail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="操作失败"
+        android:textSize="@dimen/sp_20"/>
+
+    <Button
+        android:id="@+id/btnMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="弹出消息框"
+        android:textSize="@dimen/sp_20"/>
+
+    <Button
+        android:id="@+id/btnIput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="弹出对话框"
+        android:textSize="@dimen/sp_20"/>
+
+
+
+</LinearLayout>
